[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scripts/Main/InjertoZone.gd" type="Script" id=1]
[ext_resource path="res://Assets/Sprites/WhiteMarker.png" type="Texture" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 50.0

[node name="InjertoZone" type="Area2D"]
collision_layer = 16
collision_mask = 16
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 2 )
__meta__ = {
"_editor_description_": ""
}

[connection signal="input_event" from="." to="." method="_on_InjertoZone_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_InjertoZone_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_InjertoZone_mouse_exited"]
